--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.js" integrity="sha512-9mpsATI0KClwt+xVZfbcf2lJ8IFBAwsubJ6mI3rtULwyM3fBmQFzj0It4tGqxLOGQwGfJdk/G+fANnxfq9/cew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
-    const socket = io('https://socket-server-basic-lilac.vercel.app/');
+    const socket = io(window?.location?.hostname || 'http://localhost:8080');
     
     const formulario = document.querySelector('#miFormulario')
     const mensajes = document.querySelector('#misMensajes')
@@ -59,7 +59,6 @@
         socket.emit('mensaje-to-server', {
           texto: nuevoMensaje
         })
-
         mensaje.value='';
 
       }
